<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:background="@color/purple_500"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/container_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/tv_overview"
        app:layout_constraintEnd_toStartOf="@id/tv_title"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
        app:layout_constraintVertical_bias="0.369">

        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg_image"
            android:contentDescription="@string/detail"
            android:elevation="50dp" />

        <ProgressBar
            android:layout_width="187dp"
            android:layout_height="235dp"
            android:backgroundTint="@color/purple_700"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0.4" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="282dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@id/myToolbar"
        tools:text="@string/title" />


    <!--    Original title-->

    <TextView
        android:id="@+id/tv_original_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/original_title"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="@string/original_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/titikdua"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="@string/titikdua" />

    <TextView
        android:id="@+id/tv_original_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="Original title isi" />

    <!--Original language-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/original_language"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
        tools:text="@string/original_language" />

    <TextView
        android:id="@+id/tv_titikdua_original_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/titikdua"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
        tools:text="@string/titikdua" />

    <TextView
        android:id="@+id/tv_original_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_titikdua_original_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
        tools:text="Original language isi" />

    <!--    Release Date-->


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/release_date"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/release_date" />

    <TextView
        android:id="@+id/tv_titikdua_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/titikdua"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/titikdua" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_titikdua_release_date"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Release date isi" />


    <!--    Popularity-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/popularity"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        tools:text="@string/popularity" />

    <TextView
        android:id="@+id/tv_titikdua_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/titikdua"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        tools:text="@string/titikdua" />

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:minLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_titikdua_popularity"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        tools:text="Pularity isi" />


    <!--    Overview-->
    <TextView
        android:id="@+id/tv_overview_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:minLines="1"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_image"
        tools:text="Overview" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:minLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview_text"
        tools:text="Overview" />

</androidx.constraintlayout.widget.ConstraintLayout>